[package]
name = "grin-history-tools-models"
version = "0.1.0"
authors = ["Yeastplume <yeastplume@gmail.com>"]

edition = "2018"

[dependencies]
grin_api = { path = "../../../grin-yeastplume/api", version = "5.2.0-alpha.1" }
grin_util = { path = "../../../grin-yeastplume/util", version = "5.2.0-alpha.1" }
grin_core = { path = "../../../grin-yeastplume/core", version = "5.2.0-alpha.1" }

#grin_api = "5.1.2"
#grin_util = "5.1.2"
#grin_core = "5.1.2"

bigdecimal = { version = "0.1.2", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "uuidv07", "chrono", "r2d2", "numeric", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }

#log = "0.4.8"
#env_logger ="0.7.1"

thiserror = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"