[package]
name = "grin-history-tools-web"
version = "0.1.0"
authors = ["Yeastplume <yeastplume@gmail.com>"]

edition = "2018"

[dependencies]
grin-history-tools-models = { path = "../../crates/models", version = "0.1.0"}
dotenv = "0.15"

actix-web = "3"
actix-identity = "0.3"
futures = "0.3.5"

diesel = { version = "1.4.7", features = ["postgres", "uuidv07", "chrono", "r2d2", "numeric"] }
r2d2 = "0.8"

uuid = { version = "=0.7", features = ["serde", "v4"] }
time = "0.2"
chrono = { version = "0.4", features = ["serde"] }

lazy_static = "1"
log = "0.4.8"
env_logger ="0.7.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rand = "0.7"
argon2rs = "0.2"
jsonwebtoken = "7"

anyhow = "1.0"
thiserror = "1.0"
num = "0.2"
shrinkwraprs = "0.2"

structopt = "0.3"

regex = "1"
